--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "swiftdesign/api",
+  "name": "swiftdesign/apiv2",
   "description": "API Adpater for SwiftDesign",
   "keywords": [],
   "homepage": "https://swiftdesign.com",
