--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     "php": ">=5.4.0",
     "illuminate/config": "6.*",
     "illuminate/support": "6.*",
-    "guzzlehttp/guzzle": "^6.2",
-    "anhskohbo/no-captcha": ">=2.0"
+    "guzzlehttp/guzzle": "^6.2"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0"
