--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "illuminate/config": "6.*",
-    "illuminate/support": "6.*",
+    "illuminate/config": ">=6.0",
+    "illuminate/support": ">=^6.0",
     "guzzlehttp/guzzle": "^6.2"
   },
   "require-dev": {
