--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "php": ">=5.4.0",
     "illuminate/config": ">=6.0",
     "illuminate/support": ">=6.0",
-    "guzzlehttp/guzzle": ">=6.2"
+    "guzzlehttp/guzzle": "^7.0.1"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0"
